register aployee api

--- a/vaccinekrugger/src/main/resources/messages_es_EC.properties
+++ b/vaccinekrugger/src/main/resources/messages_es_EC.properties
@@ -1,5 +1,23 @@
 #Validation Message
 project.warn.fieldMandatory=The field {0} is mandatory.
+project.warn.formatDateStart=The format to date start is invalid.
+project.warn.formatDateEnd=The format to date end is invalid.
+project.warn.fieldNoExist=The field {0} no exist.
+project.warn.dateStartIsMoreThanDateEnd=The date start is more than date end.
+project.warn.fieldOnlyAccept=The field {0} only accept {1}. 
+project.warn.existUser=Already exists a user with identification {0}. 
 
 #Information Message
 project.info.notReturnData=The query does not return data.
+
+#Messages Response
+project.response.ok=Ok
+
+#Fields
+project.fields.identification=identification
+project.fields.firstName=first name
+project.fields.lastName=last name
+project.fields.mail=mail
+project.fields.employee=employee
+project.fields.letters=letters
+project.fields.numbers=numbers
