--- a/vaccinekrugger/src/main/resources/messages_es_EC.properties
+++ b/vaccinekrugger/src/main/resources/messages_es_EC.properties
@@ -5,7 +5,9 @@ project.warn.formatDateEnd=The format to date end is invalid.
 project.warn.fieldNoExist=The field {0} no exist.
 project.warn.dateStartIsMoreThanDateEnd=The date start is more than date end.
 project.warn.fieldOnlyAccept=The field {0} only accept {1}. 
-project.warn.existUser=Already exists a user with identification {0}. 
+project.warn.existUser=Already exists a user with identification {0}.
+project.warn.NoexistVaccine= No exists the vaccine type {0}. 
+project.warn.formatDateIsInvalid=The format to date is invalid.
 
 #Information Message
 project.info.notReturnData=The query does not return data.
